ci: refactor reusable Go CI workflow to streamline job outputs and enhance vulnerability scanning

--- a/.github/workflows/reusable-go-ci.yaml
+++ b/.github/workflows/reusable-go-ci.yaml
@@ -66,24 +66,21 @@ on:
     outputs:
       image_digest:
         description: "Image digest from the build image step"
-        value: ${{ jobs.composite_ci_job.outputs.image_digest }}
+        value: ${{ jobs.build.outputs.image_digest }}
       image_tag:
         description: "Image tag from the build image step"
-        value: ${{ jobs.composite_ci_job.outputs.image_tag }}
+        value: ${{ jobs.build.outputs.image_tag }}
 
 jobs:
-  composite_ci_job:
-    name: "CI for ${{ inputs.module }}"
+  static_checks:
+    name: "Static Checks for ${{ inputs.module }}"
+    if: ${{ inputs.run_lint || inputs.run_check_generated_files }}
     runs-on: ubuntu-latest
-    outputs:
-      image_digest: ${{ steps.build_image_ko_step.outputs.digest }}
-      image_tag: ${{ steps.build_image_ko_step.outputs.tag }}
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
         with:
-          fetch-depth: ${{ inputs.run_code_analysis && 0 || 1 }} # Fetch all history for CodeQL, otherwise shallow clone
+          fetch-depth: ${{ inputs.run_code_analysis && 0 || 1 }}
 
       - name: Setup Go
         uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
@@ -110,12 +107,46 @@ jobs:
           make generate
           git diff --exit-code -- . ':!go.sum' ':!go.mod'
 
+      - name: Run golangci-lint
+        if: ${{ inputs.run_lint }}
+        uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # pin@v6.0.1
+        with:
+          version: ${{ inputs.golangci_lint_binary_version }}
+          working-directory: ${{ inputs.module }}
+          args: --timeout 5m
+
+  tests:
+    name: "Tests & Coverage for ${{ inputs.module }}"
+    if: ${{ inputs.run_tests }}
+    runs-on: ubuntu-latest
+    outputs:
+      test_reports_artifact_id: ${{ steps.upload_test_reports_artifact_step.outputs.artifact-id }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
+        with:
+          fetch-depth: ${{ inputs.run_code_analysis && 0 || 1 }}
+
+      - name: Setup Go
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
+        with:
+          go-version-file: "${{ inputs.module }}/go.mod"
+          cache: false # Using a separate cache step
+
+      - name: Restore Go Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ inputs.module }}-${{ hashFiles(format('{0}/go.sum', inputs.module)) }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ inputs.module }}-
+
       - name: Set up gotestfmt
-        if: ${{ inputs.run_tests }}
         uses: gotesttools/gotestfmt-action@v2
 
       - name: Build and test module
-        if: ${{ inputs.run_tests }}
         shell: bash
         working-directory: ${{ inputs.module }}
         env:
@@ -123,13 +154,11 @@ jobs:
         run: make test
 
       - name: Generate HTML coverage report
-        if: ${{ inputs.run_tests }}
         shell: bash
         working-directory: ${{ inputs.module }}
         run: go tool cover -html=cover.out -o coverage.html
 
       - name: Generate Cobertura coverage report
-        if: ${{ inputs.run_tests }}
         shell: bash
         working-directory: ${{ inputs.module }}
         run: |
@@ -137,7 +166,7 @@ jobs:
           gocover-cobertura < cover.out > cobertura.xml
 
       - name: Upload go test log
-        if: ${{ inputs.run_tests && always() }}
+        if: ${{ always() }} # Upload even if previous steps fail
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # pin@v4.6.2
         with:
           name: ${{ inputs.module }}-gotest.log
@@ -146,7 +175,7 @@ jobs:
 
       - name: Upload test reports artifact
         id: upload_test_reports_artifact_step
-        if: ${{ inputs.run_tests && always() }}
+        if: ${{ always() }} # Upload even if previous steps fail
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # pin@v4.6.2
         with:
           name: ${{ inputs.module }}-test-report
@@ -157,7 +186,7 @@ jobs:
             ${{ inputs.module }}/junit.xml
 
       - name: Publish test report as Check
-        if: ${{ inputs.run_tests && always() && (github.event_name == 'pull_request') }}
+        if: ${{ always() && (github.event_name == 'pull_request') }}
         uses: mikepenz/action-junit-report@v5
         with:
           report_paths: "${{ inputs.module }}/junit.xml"
@@ -167,7 +196,7 @@ jobs:
 
       - name: Prepare coverage comment
         id: prepare_coverage_comment_step
-        if: ${{ inputs.run_tests && always() && (github.event_name == 'pull_request') }}
+        if: ${{ always() && (github.event_name == 'pull_request') }}
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
           filename: ${{ inputs.module }}/cobertura.xml
@@ -179,7 +208,7 @@ jobs:
           thresholds: "60 80"
 
       - name: Add Coverage PR Comment
-        if: ${{ inputs.run_tests && always() && (github.event_name == 'pull_request') }}
+        if: ${{ always() && (github.event_name == 'pull_request') }}
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: module-coverage-${{ inputs.module }}
@@ -188,17 +217,128 @@ jobs:
             ${{ steps.prepare_coverage_comment_step.outputs.markdown }}
             Download the latest HTML coverage report for ${{ inputs.module }} [here](${{ github.server_url }}/${{ inputs.github_repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.upload_test_reports_artifact_step.outputs.artifact-id }}).
 
+  source_scan:
+    name: "Source Vulnerability Scan for ${{ inputs.module }}"
+    if: ${{ inputs.run_vulnerability_check }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
+        with:
+          fetch-depth: ${{ inputs.run_code_analysis && 0 || 1 }}
+
+      - name: Setup Go
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
+        with:
+          go-version-file: "${{ inputs.module }}/go.mod"
+          cache: false
+
+      - name: Restore Go Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ inputs.module }}-${{ hashFiles(format('{0}/go.sum', inputs.module)) }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ inputs.module }}-
+
+      - name: Run govulncheck
+        uses: golang/govulncheck-action@b625fbe08f3bccbe446d94fbf87fcc875a4f50ee # pin@1.0.4
+        with:
+          go-package: ./...
+          work-dir: ${{ inputs.module }}
+
+  codeql:
+    name: "CodeQL Analysis for ${{ inputs.module }}"
+    if: ${{ inputs.run_code_analysis }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
+        with:
+          fetch-depth: 0 # CodeQL requires full history
+
+      - name: Setup Go
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
+        with:
+          go-version-file: "${{ inputs.module }}/go.mod"
+          cache: false
+
+      - name: Restore Go Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ inputs.module }}-${{ hashFiles(format('{0}/go.sum', inputs.module)) }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ inputs.module }}-
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@4dd16135b69a43b6c8efb853346f8437d92d3c93 # pinv3.26.6
+        with:
+          languages: go
+          build-mode: manual # Set to manual as we provide a build step
+
+      - name: Build module for CodeQL
+        shell: bash
+        working-directory: ${{ inputs.module }}
+        run: |
+          echo "Attempting to build ${{ inputs.module }} for CodeQL analysis..."
+          if [ -f Makefile ] && grep -q -E "^build[:[:space:]]" Makefile; then
+            echo "Found Makefile with build target. Running make build..."
+            make build
+          elif [ -f go.mod ]; then
+            echo "Found go.mod. Running go build ./..."
+            go build ./...
+          else
+            echo "WARNING: No Makefile with a 'build' target or go.mod found in ${{ inputs.module }}. CodeQL may not analyze effectively."
+          fi
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@4dd16135b69a43b6c8efb853346f8437d92d3c93 # pinv3.26.6
+        with:
+          category: "/language:go"
+
+  build:
+    name: "Build Image for ${{ inputs.module }}"
+    if: ${{ inputs.run_build_image && (needs.static_checks.result != 'failure') && (needs.tests.result != 'failure') }}
+    needs: [static_checks, tests]
+    runs-on: ubuntu-latest
+    outputs:
+      image_digest: ${{ steps.build_image_ko_step.outputs.digest }}
+      image_tag: ${{ steps.build_image_ko_step.outputs.tag }}
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # pin@v4.2.2
+        with:
+          fetch-depth: ${{ inputs.run_code_analysis && 0 || 1 }}
+
+      - name: Setup Go
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # pin@5.5.0
+        with:
+          go-version-file: "${{ inputs.module }}/go.mod"
+          cache: false
+
+      - name: Restore Go Cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ inputs.module }}-${{ hashFiles(format('{0}/go.sum', inputs.module)) }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ inputs.module }}-
+
       - name: Setup Ko
-        if: ${{ inputs.run_build_image }}
         uses: ko-build/setup-ko@v0.8
 
       - name: Inject slug vars
-        if: ${{ inputs.run_build_image }}
         uses: rlespinasse/github-slug-action@v5
 
       - name: Build and Push Image with Ko
         id: build_image_ko_step
-        if: ${{ inputs.run_build_image }}
         shell: bash
         working-directory: ${{ inputs.module }}
         env:
@@ -215,7 +355,7 @@ jobs:
           echo "digest=$digest" >> $GITHUB_OUTPUT
           tag_value=""
           if [[ "${{ inputs.github_ref }}" == refs/tags/* ]]; then
-            tag_value=$(echo "${{ inputs.github_ref }}" | sed 's_refs/tags/\(.*\)_\1_')
+            tag_value=$(echo "${{ inputs.github_ref }}" | sed 's_refs/tags/\\(.*\\)_\\1_')
           elif [[ "${{ inputs.github_ref }}" == refs/pull/* ]]; then
             tag_value="pr-${GITHUB_HEAD_REF_SLUG:-$GITHUB_REF_SLUG}"
           else
@@ -223,55 +363,17 @@ jobs:
           fi
           echo "tag=$tag_value" >> $GITHUB_OUTPUT
 
+  image_scan:
+    name: "Image Vulnerability Scan for ${{ inputs.module }}"
+    if: ${{ inputs.run_build_image && needs.build.result == 'success' }}
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      # No checkout or Go setup needed if only running Trivy on a remote image
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
-        if: ${{ inputs.run_build_image }}
         with:
-          image-ref: ${{ inputs.container_registry }}/${{ inputs.github_repository }}/${{ inputs.module }}@${{ steps.build_image_ko_step.outputs.digest }}
+          image-ref: ${{ inputs.container_registry }}/${{ inputs.github_repository }}/${{ inputs.module }}@${{ needs.build.outputs.image_digest }}
           exit-code: "1"
           vuln-type: "os,library"
           severity: "CRITICAL,HIGH"
-
-      - name: Run govulncheck
-        if: ${{ inputs.run_vulnerability_check }}
-        uses: golang/govulncheck-action@b625fbe08f3bccbe446d94fbf87fcc875a4f50ee # pin@1.0.4
-        with:
-          go-package: ./...
-          work-dir: ${{ inputs.module }}
-
-      - name: Initialize CodeQL
-        if: ${{ inputs.run_code_analysis }}
-        uses: github/codeql-action/init@4dd16135b69a43b6c8efb853346f8437d92d3c93 # pinv3.26.6
-        with:
-          languages: go
-          build-mode: manual
-
-      - name: Build module for CodeQL
-        if: ${{ inputs.run_code_analysis }}
-        shell: bash
-        working-directory: ${{ inputs.module }}
-        run: |
-          echo "Attempting to build ${{ inputs.module }} for CodeQL analysis..."
-          if [ -f Makefile ] && grep -q -E "^build[:[:space:]]" Makefile; then
-            echo "Found Makefile with build target. Running make build..."
-            make build
-          elif [ -f go.mod ]; then
-            echo "Found go.mod. Running go build ./..."
-            go build ./...
-          else
-            echo "WARNING: No Makefile with a 'build' target or go.mod found in ${{ inputs.module }}. CodeQL may not analyze effectively."
-          fi
-
-      - name: Perform CodeQL Analysis
-        if: ${{ inputs.run_code_analysis }}
-        uses: github/codeql-action/analyze@4dd16135b69a43b6c8efb853346f8437d92d3c93 # pinv3.26.6
-        with:
-          category: "/language:go"
-
-      - name: Run golangci-lint
-        if: ${{ inputs.run_lint }}
-        uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # pin@v6.0.1
-        with:
-          version: ${{ inputs.golangci_lint_binary_version }}
-          working-directory: ${{ inputs.module }}
-          args: --timeout 5m
